--- a/private/skins/qobo/templates/ip_banned.twig
+++ b/private/skins/qobo/templates/ip_banned.twig
@@ -1,27 +1,28 @@
 {% extends "_layout.twig" %}
 
-{% set title = "IP Banned" %}
+{% set title = "You are IP banned" %}
 
 {% block content %}
-    <div class="content-header">
-        <span>You are IP banned!</span>
-    </div>
-    <div class="content-box">
-        <p>You have been IP banned from {{ website_branding.name }} for the following reason:</p>
-        <p>{{ data.reason | markdown_unsafe }}</p>
-        <p>Your ban was filed on {{ data.time | date('F j, Y') }}, and it will not expire.</p>
-        <p>Your IP is {{ data.ip }},
-            {% if users|length > 1 %}
-                and the accounts linked to this IP are
-                {% for user in users %}
-                    {{ user.name }}{{ not loop.last ? ',' }}
-                {% endfor %}
-            {% else %}
-                and the account linked to this IP is
-                {% for user in users %}
-                    {{ user.name }}
-                {% endfor %}
-            {% endif %}
-        </p>
+    <div class="section">
+        <div class="section-title">
+            <h1>You are IP banned</h1>
+        </div>
+        <div class="content-box">
+            <p>You have been IP banned from {{ website_branding.name }}.</p>
+            <p>Your ban was filed on {{ data.time | date('F j, Y') }}, and it will not expire.</p>
+            <p>Your IP is {{ data.ip }},
+                {% if users|length > 1 %}
+                    and the accounts linked to this IP are
+                    {% for user in users %}
+                        {{ user.name }}{{ not loop.last ? ',' }}
+                    {% endfor %}
+                {% else %}
+                    and the only account linked to this IP is
+                    {% for user in users %}
+                        {{ user.name }}
+                    {% endfor %}
+                {% endif %}
+            </p>
+        </div>
     </div>
 {% endblock %}
