--- a/private/skins/qobo/templates/_layout.twig
+++ b/private/skins/qobo/templates/_layout.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }} - {{ website_branding.name }}</title>
-    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="stylesheet" href="/assets/css/common.css?r={{ get_css_file_date() }}">
     <meta name="theme-color" content="#FF723D">
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:url" content="{{ page_url }}">
@@ -56,8 +56,10 @@
     <div class="header">
         <div class="page">
             <div class="header-logo">
-                <a href="/"><img alt="{{ website_branding.name }}"
-                                 class="logo" src="{{ website_branding.assets_location }}/logo-wordmark.png"></a>
+                <a href="/">
+                    <img alt="{{ website_branding.name }}" class="logo" src="{{ website_branding.assets_location }}/logo-wordmark.png">
+                    <img alt="{{ website_branding.name }}" class="logo-small" src="{{ website_branding.assets_location }}/logo.png">
+                </a>
             </div>
             {% for link in header_main_links() %}
                 <a class="menulink" href="{{ link.url }}">{{ link.name }}</a>
@@ -72,7 +74,9 @@
             </form>
             <div class="header-links">
                 {% if is_user_logged_in %}
+                    <!--
                     <a class="menulink" href="/notices">{{ user_notice_data }} notifications</a>
+                    -->
                 <div>
                     <div class="menuButton" data-menu-id="user-menu">
                         <img src="{{ profile_picture(user_data.name) }}" class="pfp" alt="{{ user_data.name }}">
