--- a/biscuit/stylesheets/mixins/_responsiveness.scss
+++ b/biscuit/stylesheets/mixins/_responsiveness.scss
@@ -8,3 +8,18 @@
     @content;
   }
 }
+
+@mixin maxwidths() {
+  @include responsive('tiny') {
+    max-width: 290px;
+  }
+  @include responsive('small') {
+    max-width: 450px;
+  }
+  @include responsive('medium') {
+    max-width: 800px;
+  }
+  @include responsive('large') {
+    max-width: 1200px;
+  }
+}
