bring back "welcome to sb" jumbotron for the 4th time

--- a/private/skins/qobo/templates/index.twig
+++ b/private/skins/qobo/templates/index.twig
@@ -25,6 +25,33 @@
     </script>
 {% endblock %}
 
+{% block precontent %}
+    <div class="jumbotron homepage-banner">
+        <div class="jumbotron-container">
+            <div class="jumbotron-welcome">
+                {% if is_user_logged_in %}
+                    <div class="logged-in">
+                        <img src="{{ profile_picture(user_data.name) }}" class="pfp" alt="{{ user_data.name }}">
+                        <div>
+                            <h1>Welcome to {{ website_branding.name }}, {{ user_data.title }}</h1>
+                            <p>@{{ user_data.name }}</p>
+                        </div>
+                    </div>
+                {% else %}
+                    <div class="logged-out">
+                        <h1>Welcome to {{ website_branding.name }}</h1>
+                        {% if is_qobo %}
+                            <p>Your content, your narration, your niche on the web.</p>
+                        {% else %}
+                            <p>Insert slogan.</p>
+                        {% endif %}
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
     <div class="grid">
         <div class="col-8">
