--- a/biscuit/stylesheets/_jumbotron.scss
+++ b/biscuit/stylesheets/_jumbotron.scss
@@ -1,10 +1,35 @@
 .jumbotron {
   background: purple;
 
-  &.profile-banner {
-    background: #111;
+  &.homepage-banner {
     background-size: cover;
-    background-position: center;
+    background: linear-gradient(180deg, rgba(255,114,61,1) 42%, rgba(254,180,45,1) 100%); //straight outta chip chilla
+    //background: linear-gradient(to bottom, #ffc578 0%, #fb9d23 100%) center; (old 2022 cheeserox gradient)
+    color: white;
+
+    margin-top: -$header-main-height;
+    height: 150px + $header-main-height;
+
+    .jumbotron-container {
+      padding-top: $header-main-height;
+      height: 150px + $header-main-height;
+
+      .jumbotron-welcome {
+        flex-grow: 1;
+        .logged-in {
+          display: flex;
+          .pfp {
+            height: 100px;
+            margin-right: 10px;
+          }
+        }
+      }
+    }
+  }
+
+  &.profile-banner {
+    background-size: cover;
+    background: #111 center;
 
     margin-top: -($header-user-height + $header-main-height);
     height: 250px + ($header-user-height + $header-main-height);
@@ -17,18 +42,10 @@
   // duplicate of the page class
   .jumbotron-container
   {
+    @include maxwidths();
+
     display: flex;
     align-items: center;
     margin: auto;
-    @include responsive('small') {
-      max-width: 450px;
-    }
-    @include responsive('medium') {
-      max-width: 700px;
-    }
-    @include responsive('large') {
-      max-width: 1000px;
-    }
   }
-
 }
