--- a/biscuit/stylesheets/_footer.scss
+++ b/biscuit/stylesheets/_footer.scss
@@ -10,6 +10,5 @@
   line-height: 20px;
   clear: both;
   background: $content-box-background-color;
-  border: 1px solid $content-box-border-color;
-  border-radius: $content-box-roundness;
+  border-top: 1px solid $content-box-border-color;
 }
