--- a/biscuit/stylesheets/test.scss
+++ b/biscuit/stylesheets/test.scss
@@ -1,9 +1,45 @@
 /*!
  * OpenSB Biscuit "Eyesore" theme
+ * This is an example of a "theme" for the Biscuit skin.
+ * It's meant to look like shit on purpose, for real.
+ *
+ * Unlike pre-"Orange" OpenSB's Finalium 1 frontend, where CSS
+ * for themes would be overlaid on top of the base theme (I think?).
+ * Biscuit themes are going to be a lot more "flexible".
  */
 
+@import 'base_variables';
+
+// AND NOW we override these variables
+
+// fonts
+$font: "Comic Sans MS", cursive;
+
+// random-ass colors
+$primary: #ff4400;
+$primary-darker: #FEFEAA;
+$secondary: #4fe1e1;
+$green: #00ff47;
+$red: #ffae00;
+
+$color-map: (
+        "primary": $primary,
+        "secondary": $secondary,
+        "success": $green,
+        "danger": $red,
+);
+
+// content boxes
+$content-box-background-color: #222222;
+$content-box-border-color: darken($secondary, 7.5%);
+$context-box-padding: 12px;
+
+// now import the basic biscuit stuff
+@import '_imports.scss';
+
 :root {
-  font-family: "Comic Sans MS", cursive;
+  color: rebeccapurple;
+  font-family: $font;
 }
 
 .header-test {
