--- a/private/skins/qobo/templates/components/test/header.twig
+++ b/private/skins/qobo/templates/components/test/header.twig
@@ -2,6 +2,9 @@
     <h1>
         <a href="/">{{ website_branding.name }}</a>
     </h1>
+    <p>
+        The Ultimate Testing Theme!
+    </p>
     {% for link in header_main_links() %}
         <a href="{{ link.url }}">{{ link.name }}</a>
     {% endfor %}
