--- a/private/skins/qobo/templates/watch.twig
+++ b/private/skins/qobo/templates/watch.twig
@@ -34,98 +34,5 @@
 
 
 {% block content %}
-    {% if submission.is_owner %}
-        <div class="content-box watch-edit dark">
-            <a href="/edit?v={{ submission.id }}">Edit</a>
-            <a href="/feature?v={{ submission.id }}">Feature on profile</a>
-        </div>
-        <br>
-    {% endif %}
-    <div class="grid">
-        <div class="col-8">
-            <div class="submission">
-                {{ submission_view(submission) }}
-            </div>
-            <br>
-            <div class="watch-box">
-                <h1>{{ submission.title }}</h1>
-                <hr>
-                <div class="watch-box-row">
-                    <div class="watch-box-left">
-                        <img class="watch-box-profile-picture pfp" src="{{ profile_picture(submission.author.info.username) }}">
-                        <div class="watch-box-author">
-                            <div class="watch-box-author-userlink">
-                                {{ user_link(submission.author) }}
-                                {% if not submission.is_owner %}
-                                    <button class="button button-secondary button-small" id="follow-user">
-                                        {% if submission.author.following %}
-                                            Unfollow
-                                        {% else %}
-                                            Follow
-                                        {% endif %}
-                                    </button>
-                                    (<span id="follower_count">{{ submission.author.followers }}</span> followers)
-                                {% endif %}
-                            </div>
-                            <div class="watch-box-author-info">Uploaded on {{ submission.published | date('F j, Y') }}</div>
-                            {% if submission.published_originally and submission.original_site %}
-                                <div class="watch-box-author-info-small">First uploaded on {{ submission.original_site }} on {{ submission.published_originally | date('M j, Y') }}</div>
-                            {% elseif submission.original_site %}
-                                <div class="watch-box-author-info-small">Originally uploaded on {{ submission.original_site }}</div>
-                            {% endif %}
-                        </div>
-                    </div>
-                    <div class="watch-box-right">
-                        {# hack to prevent twig from outputing the number 1 #}
-                        {% if submission.interactions.views != 1 %}
-                            {% set pluralViews = "s" %}
-                        {% endif %}
-                        <div class="watch-box-views">{{ submission.interactions.views }} view{{ pluralViews }}</div>
-                        <div id="rater"></div>
-                        <div><small>{{ submission.interactions.ratings.total }} ratings</small></div>
-                    </div>
-                </div>
-                <hr>
-                <div class="watch-box-description">
-                    {% if submission.description | trim is not empty %}
-                        {{ submission.description | markdown_user_written }}
-                    {% else %}
-                        <p>This submission has no description.</p>
-                    {% endif %}
-                </div>
-                <hr>
-                <div>Audience rating: {{ submission.rating | capitalize }}</div>
-            </div>
-            <div class="clear"></div>
-            <br>
-            <div class="section">
-                <div class="section-title">
-                    <h1>Comments</h1>
-                </div>
-                <div id="comments">
-                    <div class="content-box">
-                        {% if is_user_logged_in %}
-                            {{ include('/components/_comment_input.twig') }}
-                        {% endif %}
-                        <div id="comment"></div>
-                        {% for comment in submission.comments %}
-                            {{ include('/components/_comment.twig') }}
-                            <div id="replies">
-                                {% for comment in comment.replies %}
-                                    {{ include('/components/_comment.twig') }}
-                                {% endfor %}
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="content-box">
-            {% for submission in submission.recommended %}
-                {{ include('/components/_index_submission.twig') }}
-            {% endfor %}
-            </div>
-        </div>
-    </div>
+    {{ include(include_component('watch_content')) }}
 {% endblock %}
