--- a/biscuit/stylesheets/test.scss
+++ b/biscuit/stylesheets/test.scss
@@ -12,15 +12,12 @@
 
 // AND NOW we override these variables
 
-// fonts
-$font: "Comic Sans MS", cursive;
-
 // random-ass colors
-$primary: #ff4400;
-$primary-darker: #FEFEAA;
-$secondary: #4fe1e1;
-$green: #00ff47;
-$red: #ffae00;
+$primary: #000cff;
+$primary-darker: #0000aa;
+$secondary: #aaaaaa;
+$green: #00ff00;
+$red: #ff0000;
 
 $color-map: (
         "primary": $primary,
@@ -30,26 +27,34 @@ $color-map: (
 );
 
 // content boxes
-$content-box-background-color: #222222;
+$content-box-background-color: #eeeeee;
 $content-box-border-color: darken($secondary, 7.5%);
 $context-box-padding: 12px;
 
 // now import the basic biscuit stuff
 @import '_imports.scss';
 
-:root {
-  color: rebeccapurple;
-  font-family: $font;
-}
-
 .header-test {
   text-align: center;
-  background: black;
-  color: #ff7300;
   z-index: 5318008;
   position: sticky;
+  padding-bottom: 10px;
+  border-bottom: 1px solid gray;
+}
 
-  a {
-    color: red;
+.footer-test {
+  text-align: center;
+  padding-top: 10px;
+  border-top: 1px solid gray;
+}
+
+.banner-test {
+  text-align: center;
+  padding: 5px;
+}
+
+@each $color, $value in $color-map {
+  .banner-test-#{$color} {
+    border: 1px solid $value;
   }
 }
