watch page stuff

--- a/private/skins/common/image.twig
+++ b/private/skins/common/image.twig
@@ -1,1 +1,1 @@
-<img class="img-submission img-fluid" src="{{ submission.file }}" alt="{{ submission.title }}">
+<img class="img-submission" style="max-width: 100%" src="{{ submission.file }}" alt="{{ submission.title }}">
