--- a/private/skins/qobo/templates/index.twig
+++ b/private/skins/qobo/templates/index.twig
@@ -60,5 +60,5 @@
 {% endblock %}
 
 {% block content %}
-    {{ include(include_component('index_content')) }}
+    {{ include(component('index_content')) }}
 {% endblock %}
