--- a/private/skins/qobo/templates/watch.twig
+++ b/private/skins/qobo/templates/watch.twig
@@ -34,5 +34,5 @@
 
 
 {% block content %}
-    {{ include(include_component('watch_content')) }}
+    {{ include(component('watch_content')) }}
 {% endblock %}
